Bug fix on small screen

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -31,7 +31,7 @@ html {
   font-weight: 600;
   src: local("AvenirNextLTPro-Bold"), url("1-tools/avenir/AvenirNextLTPro-Bold.woff") format("woff"); }
 .about .about-lockup, .topic .topic-lockup, .get_started .get_started_lockup, footer {
-  max-width: 400px;
+  max-width: 380px;
   margin-left: auto;
   margin-right: auto; }
   .about .about-lockup::after, .topic .topic-lockup::after, .get_started .get_started_lockup::after, footer::after {
@@ -67,7 +67,7 @@ html {
         display: block; } }
 
 .about .about-lockup p {
-  font-size: 20px;
+  font-size: 22px;
   font-weight: 300; }
   @media screen and (min-width: 580px) {
     .about .about-lockup p {
@@ -81,13 +81,16 @@ html {
 
 .guide-lockup h2, .about .about-lockup h2, .topic .topic-lockup h2, .get_started .get_started_lockup h2 {
   color: #2d2926;
-  font-size: 40px;
+  font-size: 35px;
   font-weight: 700;
   text-transform: uppercase;
   line-height: 1.2em;
   padding-top: 80px;
   padding-bottom: 50px;
   margin: 0; }
+  @media screen and (min-width: 580px) {
+    .guide-lockup h2, .about .about-lockup h2, .topic .topic-lockup h2, .get_started .get_started_lockup h2 {
+      font-size: 45px; } }
   .guide-lockup h2 span, .about .about-lockup h2 span, .topic .topic-lockup h2 span, .get_started .get_started_lockup h2 span {
     display: inline-block;
     border-bottom: 5px solid #ec3642; }
@@ -139,12 +142,12 @@ header {
   header .hero {
     display: table-cell;
     vertical-align: bottom;
-    padding-bottom: 30px;
+    padding-bottom: 100px;
     text-align: center;
     overflow: auto; }
     @media screen and (min-width: 580px) {
       header .hero {
-        padding-bottom: 100px;
+        padding-bottom: 80px;
         vertical-align: bottom; } }
     header .hero h1 {
       text-align: center;
@@ -164,13 +167,13 @@ header {
             font-size: 60px; } }
     header .hero .kicker {
       text-align: center;
-      font-size: 50px;
+      font-size: 40px;
       font-weight: 300;
       color: white;
       letter-spacing: -0.05em; }
       @media screen and (min-width: 580px) {
         header .hero .kicker {
-          font-size: 60px; } }
+          font-size: 40px; } }
       @media screen and (min-width: 700px) {
         header .hero .kicker {
           font-size: 40px; } }
@@ -269,7 +272,7 @@ header {
   .topic .topic-lockup .hero {
     color: inherit; }
   .topic .topic-lockup h2 {
-    font-size: 30px;
+    font-size: 26px;
     font-weight: 600;
     text-transform: none; }
     @media screen and (min-width: 580px) {
